# magiccolor

./: README.md
Magiccolor/app/: CMakeLists.txt  build.gradle
Magiccolor/app/src/androidTest/java/com/algofashion/magiccolor/: ExampleInstrumentedTest.java
Magiccolor/app/src/main/: AndroidManifest.xml
Magiccolor/app/src/main/cpp/: native-lib.cpp  native-lib.h
Magiccolor/app/src/main/java/com/algofashion/magiccolor/: FilterBWActivity.java  JSONUtils.java  MainActivity.java  PaletteControls.java  PaletteLibrary.java  PaletteUtils.java  RadioGroupUtil.java  TouchHandler.java  Utils.java  myPoint.java
Magiccolor/app/src/main/res/layout/: activity_filterbw.xml  activity_main.xml
Magiccolor/app/src/main/res/values/: strings.xml
Magiccolor/app/src/test/java/com/algofashion/magiccolor/: ExampleUnitTest.java
Magiccolor/gradle/wrapper/: gradle-wrapper.properties
cpp/src/: Colorspace.cpp  Gradient.cpp  Gradient.h  Kandinsky.cpp  Kandinsky.h  KlkMColor.cpp  KlkMColor.h  Palettes.cpp  Palettes.h  Selecter.cpp  Selecter.h  core.cpp  myCImage.cpp  myCImage.h  myColorRGB.cpp  myColorRGB.h  myImage.cpp  myImage.h  myPoint.cpp  myPoint.h  utilcore.cpp  utilcore.h
cpp/test/: Makefile  core  test  test.cpp
